tests/bonsai/error/struct_duplicate.bonsai
element vec3f = vector[f32, 3];

element Ray {
    o : vec3f;
    o : vec3f; // not allowed: duplicate
    t : f32 = 0;
}
