tests/bonsai/error/struct_duplicate.expect
---CODE---
1
---STDERR---
[internal] Error: src/Parser/Parser.cpp:59
tests/bonsai/error/struct_duplicate.bonsai:5:5: [parse error] Duplicate field name: o in element definition: Ray

    o : vec3f; // not allowed: duplicate
    ^
